--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    
+                  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/scroll-carousel@1.2.7/dist/scroll.carousel.min.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -26,8 +28,10 @@
     -->
     <title>React App</title>
   </head>
+  <script src="https://cdn.jsdelivr.net/npm/scroll-carousel@1.2.7/dist/scroll.carousel.min.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+  
     <div id="root"></div>
     <!--
       This HTML file is a template.
